# sierra

./: CONTRIBUTING.md  Changelog.md  LICENSE  MANIFEST.in  README.md  Untitled0.py  action.yml  changelog.md  pyproject.toml  pyramid-nightly.py  pyramid.py  pyramid_nightly.py  pytohtm.py  release_prots.py  requirements.txt  review.py  setup.py  sierra_nightly.py  test.py  tests.py  untitled0.py
.github/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql-analysis.yml
pyramid/: __init__.py  cTags.py  html.py  tTags.py  table.py  tags.py  write.py
sierra/: __init__.py  bullets_and_lists.py  cTags.py  custom_tags.py  index.html  main_htm.py  metadata.py  style.css  tTags.py  table.py  tags.py  write.py
src/sierra/: BulletsAndLists.py  DirectoryStructure.py  __init__.py  bullets_and_lists.py  cTags.py  custom_tags.py  directory_structure.py  main_htm.py  tTags.py  table.py  tags.py  write.py
src/sierra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: FlaskTest-0.py  test-0.py  test-1.py  test.py  tests.py
tests/: test-0.py  test-1.py
