[tool.poetry]
name = "sierra"
version = "3.0.0"
description = "A Python library for Document Object Model (DOM), in Python."
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>", "Sai Pranav <>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/BrainStormYourWayIn/sierra"
keywords = ["dom", "html", "xml", "parser", "parsing", "document", "object", "model", "tree", "bs4", "beautifulsoup", "lxml", "html5lib", "html.parser", "html5"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Utilities",
]



[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^2.5.3"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
